--- a/index.html
+++ b/index.html
@@ -6,32 +6,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant</title>
     <link rel="stylesheet" href="./css/main.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+
+
 </head>
 
 <body>
 
     <section class="section py-5 my-5">
         <div class="container">
+
+            <div class="title-section">
+                <h2 class="display-3 my-5 text-center">Menu</h2>
+                <div class="icon-decoration my-5 d-flex justify-content-center">
+                    <i class="fs-1 text-complement fas fa-utensils"></i>
+                </div>
+            </div>
+
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+
                 <div class="col">
                     <div class="card position-relative overflow-hidden">
                         <img src="./img/hamburger.jpg" class="card-img-top img-fluid" alt="Hamburguesa deliciosa">
                         <div class="card-overlay d-flex flex-column justify-content-end text-start p-4">
                             <h5 class="fs-1 card-title text-white fw-bold">Hamburguesas</h5>
-                            <p class="card-text text-white">Una deliciosa hamburguesa con ingredientes frescos y de primera
+                            <p class="card-text text-white">Una deliciosa hamburguesa con ingredientes frescos y de
+                                primera
                                 calidad.</p>
                             <a href="#" class="btn btn-primary btn-lg align-self-start">Ordenar Ahora</a>
                         </div>
                     </div>
                 </div>
 
-
                 <div class="col">
                     <div class="card position-relative overflow-hidden">
                         <img src="./img/tacos.png" class="card-img-top img-fluid" alt="Hamburguesa deliciosa">
                         <div class="card-overlay d-flex flex-column justify-content-end text-start p-4">
                             <h5 class="fs-1 card-title text-white fw-bold">Tacos</h5>
-                            <p class="card-text text-white">Una deliciosa hamburguesa con ingredientes frescos y de primera
+                            <p class="card-text text-white">Una deliciosa hamburguesa con ingredientes frescos y de
+                                primera
                                 calidad.</p>
                             <a href="#" class="btn btn-primary btn-lg align-self-start">Ordenar Ahora</a>
                         </div>
@@ -43,20 +56,21 @@
                         <img src="./img/pancakes.png" class="card-img-top img-fluid" alt="Hamburguesa deliciosa">
                         <div class="card-overlay d-flex flex-column justify-content-end text-start p-4">
                             <h5 class="fs-1 card-title text-white fw-bold">Postres</h5>
-                            <p class="card-text text-white">Una deliciosa hamburguesa con ingredientes frescos y de primera
+                            <p class="card-text text-white">Una deliciosa hamburguesa con ingredientes frescos y de
+                                primera
                                 calidad.</p>
                             <a href="#" class="btn btn-primary btn-lg align-self-start">Ordenar Ahora</a>
                         </div>
                     </div>
                 </div>
 
-
                 <div class="col">
                     <div class="card position-relative overflow-hidden">
                         <img src="./img/bebida.jpg" class="card-img-top img-fluid" alt="Hamburguesa deliciosa">
                         <div class="card-overlay d-flex flex-column justify-content-end text-start p-4">
                             <h5 class="fs-1 card-title text-white fw-bold">Bebidas</h5>
-                            <p class="card-text text-white">Una deliciosa hamburguesa con ingredientes frescos y de primera
+                            <p class="card-text text-white">Una deliciosa hamburguesa con ingredientes frescos y de
+                                primera
                                 calidad.</p>
                             <a href="#" class="btn btn-primary btn-lg align-self-start">Ordenar Ahora</a>
                         </div>
