--- a/index.html
+++ b/index.html
@@ -219,10 +219,11 @@
     </section> -->
 
 
+    <!-- Menu -->
     <div id="menu" class="section menu py-5 my-5">
         <div class="container">
             <div class="title-section">
-                <h2 class="display-3 my-5 text-start">Menu</h2>
+                <h2 class="display-3 my-5 text-center">Menu</h2>
             </div>
             <div class="row">
                 <div class="col">
@@ -842,8 +843,6 @@
 
 
 
-
-
     <!-- Gallery -->
     <section class="section gallery">
         <div class="container-fluid p-0">
@@ -878,7 +877,7 @@
     <section id="contact" class="section map py-5 my-5">
         <div class="container">
             <div class="title-section">
-                <h2 class="display-3 my-5 text-start">Encuentranos</h2>
+                <h2 class="display-3 my-5 text-center">Encuentranos</h2>
                 <!-- <div class="icon-decoration my-5 d-flex justify-content-center">
                     <i class="fs-1 text-complement fas fa-utensils"></i>
                 </div> -->
