--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <div class="control py-4 d-flex justify-content-center">
+                    <div class="control rounded pt-4 pb-2 d-flex justify-content-center">
                         <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
                             <li class="nav-item" role="presentation">
                                 <button class="nav-link active" id="pills-hamburguesa-tab" data-bs-toggle="pill"
