--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <div class="control rounded pt-4 pb-2 d-flex justify-content-center">
-                        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+                    <div class="control rounded py-3 d-flex justify-content-center">
+                        <ul class="nav nav-pills  justify-content-center align-items-center " id="pills-tab" role="tablist">
                             <li class="nav-item" role="presentation">
                                 <button class="nav-link active" id="pills-hamburguesa-tab" data-bs-toggle="pill"
                                     data-bs-target="#pills-hamburguesa" type="button" role="tab"
@@ -244,6 +244,20 @@
                                     data-bs-target="#pills-bebidas" type="button" role="tab"
                                     aria-controls="pills-bebidas" aria-selected="false">Bebidas</button>
                             </li>
+                            <li class="nav-item" role="presentation">
+                                <button class="nav-link" id="pills-postres-tab" data-bs-toggle="pill"
+                                    data-bs-target="#pills-postres" type="button" role="tab"
+                                    aria-controls="pills-postres" aria-selected="false">Postres</button>
+                            </li>
+
+
+                            <li class="nav-item" role="presentation">
+                                <button class="nav-link" id="pills-postres-tab" data-bs-toggle="pill"
+                                    data-bs-target="#pills-postres" type="button" role="tab"
+                                    aria-controls="pills-postres" aria-selected="false">Postres</button>
+                            </li>
+
+
                             <li class="nav-item" role="presentation">
                                 <button class="nav-link" id="pills-postres-tab" data-bs-toggle="pill"
                                     data-bs-target="#pills-postres" type="button" role="tab"
