--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <div class="control rounded py-3 d-flex justify-content-center">
-                        <ul class="nav nav-pills  justify-content-center align-items-center " id="pills-tab" role="tablist">
+                    <div class="control rounded p-3 d-flex justify-content-center">
+                        <ul class="nav nav-pills  " id="pills-tab" role="tablist">
                             <li class="nav-item" role="presentation">
                                 <button class="nav-link active" id="pills-hamburguesa-tab" data-bs-toggle="pill"
                                     data-bs-target="#pills-hamburguesa" type="button" role="tab"
