--- a/index.html
+++ b/index.html
@@ -224,28 +224,30 @@
         <div class="container">
             <div class="title-section">
                 <h2 class="display-3 my-5 text-center">Menu</h2>
+
+                <p class="fs-2 text-uppercase text-center  ">Selecciona una categoria de nuestro delicioso menu</p>
             </div>
             <div class="row">
                 <div class="col">
-                    <div class="control rounded p-2 d-flex justify-content-center">
-                        <ul class="nav nav-pills  " id="pills-tab" role="tablist">
-                            <li class="nav-item" role="presentation">
-                                <button class="nav-link active" id="pills-hamburguesa-tab" data-bs-toggle="pill"
+                    <div class="control rounded p-3 d-flex justify-content-center w-100 " data-aos="flip-right" data-aos-delay="500">
+                        <ul class="nav nav-pills flex-lg-nowrap flex-lg-row align-items-center justify-content-center " id="pills-tab" role="tablist">
+                            <li class="nav-item w-100 w-lg-auto " role="presentation">
+                                <button class="nav-link w-100 w-lg-auto active text-uppercase fw-bolder " id="pills-hamburguesa-tab" data-bs-toggle="pill"
                                     data-bs-target="#pills-hamburguesa" type="button" role="tab"
                                     aria-controls="pills-hamburguesa" aria-selected="true">Hamburguesa</button>
                             </li>
-                            <li class="nav-item" role="presentation">
-                                <button class="nav-link" id="pills-tacos-tab" data-bs-toggle="pill"
+                            <li class="nav-item w-100 " role="presentation">
+                                <button class="nav-link w-100 text-uppercase fw-bolder  " id="pills-tacos-tab" data-bs-toggle="pill"
                                     data-bs-target="#pills-tacos" type="button" role="tab" aria-controls="pills-tacos"
                                     aria-selected="false">Tacos</button>
                             </li>
-                            <li class="nav-item" role="presentation">
-                                <button class="nav-link" id="pills-bebidas-tab" data-bs-toggle="pill"
+                            <li class="nav-item w-100" role="presentation">
+                                <button class="nav-link w-100 text-uppercase fw-bolder " id="pills-bebidas-tab" data-bs-toggle="pill"
                                     data-bs-target="#pills-bebidas" type="button" role="tab"
                                     aria-controls="pills-bebidas" aria-selected="false">Bebidas</button>
                             </li>
-                            <li class="nav-item" role="presentation">
-                                <button class="nav-link" id="pills-postres-tab" data-bs-toggle="pill"
+                            <li class="nav-item w-100" role="presentation">
+                                <button class="nav-link w-100 text-uppercase fw-bolder " id="pills-postres-tab" data-bs-toggle="pill"
                                     data-bs-target="#pills-postres" type="button" role="tab"
                                     aria-controls="pills-postres" aria-selected="false">Postres</button>
                             </li>
