--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             <div class="title-section">
                 <h2 class="display-3 my-5 text-center">Menu</h2>
 
-                <p class="fs-2 text-uppercase text-center  ">Selecciona una categoria de nuestro delicioso menu</p>
+                <p class="fs-2 text-uppercase text-center mb-5 ">Selecciona una categoria de nuestro delicioso menu</p>
             </div>
             <div class="row">
                 <div class="col">
