--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
 </head>
 
-<body>
+<body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="50">
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-complement py-3 sticky-top" aria-label="Barra de navegacion">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-complement py-3" aria-label="Barra de navegacion">
         <div class="container">
             <a class="navbar-brand" href="#">Navbar</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample09"
@@ -74,7 +74,7 @@
 
 
     <!-- Welcome -->
-    <section id="about" class="section welcome py-5 my-5 ">
+    <section id="about" class="section welcome py-7 my-5 ">
         <div class="container">
             <div class="row row-cols-1 row-cols-lg-2 g-4">
                 <div class="col">
@@ -96,7 +96,7 @@
 
 
     <!-- Offer -->
-    <section class="section offer bg-secondary py-5 my-5">
+    <section class="section offer bg-secondary py-7 my-5">
 
         <div class="container">
             <div class="row row-cols-1 row-cols-lg-2">
@@ -222,7 +222,7 @@
 
 
     <!-- Menu -->
-    <div id="menu" class="section menu py-5 my-5">
+    <div id="menu" class="section menu py-7 my-5">
         <div class="container">
             <div class="title-section">
                 <h2 class="display-3 my-5 text-center">Menu</h2>
@@ -1492,7 +1492,7 @@
 
 
     <!-- Map -->
-    <section id="contact" class="section map py-5 my-5">
+    <section id="contact" class="section map py-7 my-5">
         <div class="container">
             <div class="title-section">
                 <h2 class="display-3 my-5 text-center">Encuentranos</h2>
