--- a/index.html
+++ b/index.html
@@ -225,16 +225,16 @@
     <div id="menu" class="section menu py-7 my-5">
         <div class="container">
             <div class="title-section">
-                <h2 class="display-3 my-5 text-center">Menu</h2>
+                <h2 class="display-3 mb-5 text-center">Menu</h2>
 
-                <p class="fs-2 text-uppercase text-center mb-5 ">Selecciona una categoria de nuestro delicioso menu</p>
+                <p class="fs-2 text-uppercase text-center mb-4 ">Selecciona una categoria de nuestro delicioso menu</p>
             </div>
 
 
             <div class="row">
                 <div class="col">
                     <div class="control border border-4 border-primary rounded p-3 d-flex justify-content-center w-100 " data-aos="flip-right"
-                        data-aos-delay="500">
+                        data-aos-delay="300">
                         <ul class="nav nav-pills flex-lg-nowrap flex-lg-row align-items-center justify-content-center "
                             id="pills-tab" role="tablist">
                             <li class="nav-item " role="presentation">
@@ -1495,7 +1495,7 @@
     <section id="contact" class="section map py-7 my-5">
         <div class="container">
             <div class="title-section">
-                <h2 class="display-3 my-5 text-center">Encuentranos</h2>
+                <h2 class="display-3 mb-5 text-center">Encuentranos</h2>
                 <!-- <div class="icon-decoration my-5 d-flex justify-content-center">
                     <i class="fs-1 text-complement fas fa-utensils"></i>
                 </div> -->
