--- a/index.html
+++ b/index.html
@@ -233,15 +233,14 @@
 
             <div class="row">
                 <div class="col">
-                    <div class="control border border-4 border-primary rounded p-3 d-flex justify-content-center w-100 " data-aos="flip-right"
-                        data-aos-delay="300">
+                    <div class="control border border-4 border-primary rounded p-3 d-flex justify-content-center w-100 "
+                        data-aos="flip-right" data-aos-delay="300">
                         <ul class="nav nav-pills flex-lg-nowrap flex-lg-row align-items-center justify-content-center "
                             id="pills-tab" role="tablist">
                             <li class="nav-item " role="presentation">
-                                <button class="nav-link active text-uppercase fw-bolder "
-                                    id="pills-hamburguesa-tab" data-bs-toggle="pill" data-bs-target="#pills-hamburguesa"
-                                    type="button" role="tab" aria-controls="pills-hamburguesa"
-                                    aria-selected="true">Hamburguesa</button>
+                                <button class="nav-link active text-uppercase fw-bolder " id="pills-hamburguesa-tab"
+                                    data-bs-toggle="pill" data-bs-target="#pills-hamburguesa" type="button" role="tab"
+                                    aria-controls="pills-hamburguesa" aria-selected="true">Hamburguesa</button>
                             </li>
                             <li class="nav-item  " role="presentation">
                                 <button class="nav-link  text-uppercase fw-bolder  " id="pills-tacos-tab"
@@ -1571,6 +1570,11 @@
             slidesPerView: 1,
             spaceBetween: 20,
             grabCursor: true,
+            loop: true,
+            autoplay: {
+                delay: 3000,
+                disableOnInteraction: false,
+            },
             keyboard: {
                 enabled: true,
             },
